# vc-stereo-ros

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
calib/aaron_in_air/: README.md  left_intrinsic_params.yaml  left_right_transform.yaml  left_stereo_params.yaml  right_intrinsic_params.yaml  right_stereo_params.yaml
launch/: vc_stereo_node.launch
nodes/: vc_stereo_node
